--- a/counter/index.html
+++ b/counter/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="counter">
             <h1>Counter</h1>
-            <h3>4</h3>
+            <h3 id="display-number">4</h3>
             <div class="btns">
                 <button type="button" id="decrease">Decrease</button>
                 <button type="button" id="reset">Reset</button>
@@ -20,5 +20,7 @@
         </div>
     </div>
     
+    <script src="Counter.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
